--- a/src/modules/popup/index.scss
+++ b/src/modules/popup/index.scss
@@ -6,6 +6,14 @@
   overflow: auto;
 
   header {
-    padding: 0 12px 12px 12px;
+    padding: 0 0 12px 0;
+
+    .button {
+      margin-right: 8px;
+    }
+  }
+
+  .table-container {
+    height: 320px;
   }
 }
